add multi-tenant support; implement SelectTenantRequest and TenantChoice DTOs, update authentication flow to handle multiple tenants, and adjust user and tenant services for global user management